--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,2 @@
-.DS_Store
-node_modules
-/dist
-examples/
-packages/
-public/
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-vue.config.js
-babel.config.js
-*.map
+/node_modules
+/
